--- a/ytstyle.css
+++ b/ytstyle.css
@@ -1,241 +1,261 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-*:foucus{
-    outline: none;
+*:foucus {
+  outline: none;
 }
-body{
-    position: relative;
-    background: #f0f0f0;
+body {
+  background: #f0f0f0;
 }
-::-webkit-scrollbar{
-    width: 7px;
+body,
+html {
+  height: 100%;
 }
-::-webkit-scrollbar-track{
-    background: transparent;
+
+::-webkit-scrollbar {
+  width: 7px;
 }
-::-webkit-scrollbar-thumb{
-    background: rgba(0,0,0,0.5);
-    height: 25px;
-    border-radius: 5px;
+::-webkit-scrollbar-track {
+  background: transparent;
 }
-.navbar{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 60px;
-    background: #fff;
-    display: flex;
-    align-items: center;
-    padding: 0 2.5em;
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.5);
+  height: 25px;
+  border-radius: 5px;
 }
-.logo{
-    width: 1.6rem;
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  padding: 0 2.5em;
+  z-index: 9999;
 }
-.logo1{
-    height: 25px;
-    margin: -10px 30px 0;;
+.logo {
+  width: 1.6rem;
 }
-.search-box{
-    position: relative;
-    left: 450px;
-    max-width: 700px;
-    width: 50%;
-    height: 35px;
-    display: flex;
+.logo1 {
+  height: 25px;
+  margin: -10px 30px 0;
 }
-.search-bar{
-    width: 85%;
-    height: 100%;
-    border: 1px solid #dbdbdb;
-    padding: 0 20px;
-    font-size: 17px;
-    text-transform: capitalize;
-    border-radius: 50px 0 0 50px;
+.search-box {
+  position: relative;
+  left: 450px;
+  max-width: 700px;
+  width: 50%;
+  height: 35px;
+  display: flex;
 }
-.search-btn{
-    width: 15%;
-    height: 100%;
-    background-color:#f0f0f0;
-    border: 1px solid #dbdbdb;
-    padding: 5px 0;
-    border-radius: 0 50px 50px 0;
-    border-left: none;
+.search-bar {
+  width: 85%;
+  height: 100%;
+  border: 1px solid #dbdbdb;
+  padding: 0 20px;
+  font-size: 17px;
+  text-transform: capitalize;
+  border-radius: 50px 0 0 50px;
 }
-.logo1_1{
-    height: 25px;
-    margin: 2px 0 0 0;
+.search-btn {
+  width: 15%;
+  height: 100%;
+  background-color: #f0f0f0;
+  border: 1px solid #dbdbdb;
+  padding: 5px 0;
+  border-radius: 0 50px 50px 0;
+  border-left: none;
 }
-.search-voice{
-    border-radius: 50px;
-    width: 10%;
-    margin: 1px 30px 0 20px;
-    border: 1px solid #dbdbdb;
+.logo1_1 {
+  height: 25px;
+  margin: 2px 0 0 0;
 }
-.user-view{
-    height: 35px;
-    display: flex;
-    margin-left: auto;
-    align-items: center;
+.search-voice {
+  border-radius: 50px;
+  width: 10%;
+  margin: 1px 30px 0 20px;
+  border: 1px solid #dbdbdb;
 }
-.user-btn{
-    width: 80px;
-    display: flex;
-    align-items: center;
-    border-radius: 50px;
-    border: 1px solid #dbdbdb;
+.user-view {
+  height: 35px;
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+.user-btn {
+  width: 80px;
+  display: flex;
+  align-items: center;
+  border-radius: 50px;
+  border: 1px solid #dbdbdb;
 }
 .user-btn:hover,
-.user-btn.active{
-    background: #DBE9FA;
+.user-btn.active {
+  background: #dbe9fa;
 }
-.logo2{
-    width: 1.4rem;
+.logo2 {
+  width: 1.4rem;
 }
 
 /* leftside bar */
 
-.leftside-bar{
-    position:relative;
-    top: 62px;
-    left: 0;
-    min-width: 250px;
-    width: 250px;
-    height: calc(100em - 62px);
-    background: #fff;
-    padding-right: 10px;
-    border-top: 0;
-    overflow: auto;
+div.leftside-bar {
+  position: relative;
+  top: 62px;
+  left: 0;
+  min-width: 250px;
+  width: 250px;
+  background: #fff;
+  padding-right: 10px;
+  border-top: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  height: calc(100% - 60px);
+  /* top: 62px;
+  left: 0;
+  overflow: auto;
+  width: 250px;
+  height: 300px; */
 }
-.leftside-bar::-webkit-scrollbar{
-    width: 10px;
+div.leftside-bar::-webkit-scrollbar {
+  width: 10px;
 }
-.leftside-bar::-webkit-scrollbar-track{
-    background: transparent;
+
+/* Track */
+div.leftside-bar::-webkit-scrollbar-track {
+  background: red;
+  height: 10px;
 }
-.leftside-bar::-webkit-scrollbar-thumb{
-    background: transparent;
+
+/* Handle */
+div.leftside-bar::-webkit-scrollbar-thumb {
+  background: black;
 }
-.link{
-    display: block;
-    width: 100%;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    text-transform: capitalize;
-    color: #242424;
-    font-size: 14px;
-    font-weight: 500;
-    text-decoration: none;
+
+/* Handle on hover */
+div.leftside-bar::-webkit-scrollbar-thumb:hover {
+  background: blue;
 }
-.si_logo{
-    height: 25px;
-    margin-right: 20px;
+.link {
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  color: #242424;
+  font-size: 14px;
+  font-weight: 500;
+  text-decoration: none;
+}
+.si_logo {
+  height: 25px;
+  margin-right: 20px;
 }
 .link:hover,
-.link.active{
-    background: rgba(0,0,0,0.04);
+.link.active {
+  background: rgba(0, 0, 0, 0.04);
 }
-.line{
-    border: none;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    margin: 20px 0;
+.line {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
 }
-.si_para{
-    margin: 0 30px 20px;
+.si_para {
+  margin: 0 30px 20px;
 }
-.si-in{
-    margin: 0 30px;
+.si-in {
+  margin: 0 30px;
 }
-.lo-head{
-    font-size: 18px;
-    margin-left: 15px;
+.lo-head {
+  font-size: 18px;
+  margin-left: 15px;
 }
 
 /* suggestions-view */
 
-.suggestion-view{
-    position: fixed;
-    left: 250px;
-    top: 60px;
-    width: calc(100% - 250px);
-    height: 60px;
-    background-color: #fff;
-    /* border-top: 1px solid #dbdbdb; */
-    border-bottom: 1px solid #dbdbdb;
-    padding:0 20px;
-    display: flex;
-    align-items: center;
-    overflow-x: auto;
-    overflow-y: hidden;
+.suggestion-view {
+  position: fixed;
+  left: 250px;
+  top: 60px;
+  width: calc(100% - 250px);
+  height: 60px;
+  background-color: #fff;
+  /* border-top: 1px solid #dbdbdb; */
+  border-bottom: 1px solid #dbdbdb;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  /* overflow-x: auto;
+  overflow-y: hidden; */
 }
-.suggestion-view::-webkit-scrollbar{
-    display: none;
+.suggestion-view::-webkit-scrollbar {
+  display: none;
 }
 
-.suggestion-topics{
-    flex: 0 0 auto;
-    padding: 10px 20px;
-    border-radius: 50px;
-    background: #f0f0f0;
-    border: 1px solid #dbdbdb;
-    text-transform: capitalize;
-    margin-right: 10px;
-    color: #242424;
-    font-size: 15px;
-    cursor: pointer;
+.suggestion-topics {
+  flex: 0 0 auto;
+  padding: 10px 20px;
+  border-radius: 50px;
+  background: #f0f0f0;
+  border: 1px solid #dbdbdb;
+  text-transform: capitalize;
+  margin-right: 10px;
+  color: #242424;
+  font-size: 15px;
+  cursor: pointer;
 }
 .suggestion-topics:hover,
-   .suggestion-topics.active{
-    color: #fff;
-    background: #242424;
+.suggestion-topics.active {
+  color: #fff;
+  background: #242424;
 }
-
 
 /* video card */
-.video-card{
-    width: calc(100%-250px);
-    margin-top: 120px;
-    margin-left: 250px;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(4,25%);
-    grid-gap: 20px 5px;
-    overflow-x: hidden;
+.video-card {
+  width: calc(100%-250px);
+  margin-top: 120px;
+  margin-left: 250px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  grid-gap: 20px 5px;
+  overflow-x: hidden;
 }
-.video{
-    min-height: 250px;
-    height: auto;
+.video {
+  min-height: 250px;
+  height: auto;
 }
-.thumbnail{
-width: 100%;
-height: 150px;
-object-fit: cover;
+.thumbnail {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
 }
-.thum-content{
-    width: 100%;
-    height: 100px;
-    padding: 10;
-    display: flex;
-    justify-content: space-between;
+.thum-content {
+  width: 100%;
+  height: 100px;
+  padding: 10;
+  display: flex;
+  justify-content: space-between;
 }
-.channel-icon{
-width: 40px;
-height: 40px;
-border-radius: 50px;
-object-fit: cover;
-margin-right: 10px;
+.channel-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  object-fit: cover;
+  margin-right: 10px;
 }
-.sub{
-    width: 100%;
-    height: 40px;
-    overflow: hidden;
+.sub {
+  width: 100%;
+  height: 40px;
+  overflow: hidden;
 }
-.channel-name{
-    font-size: 14px;
-    margin: 2px 0;
-    color: #979797;
+.channel-name {
+  font-size: 14px;
+  margin: 2px 0;
+  color: #979797;
 }
